# wndchrm

./: AUTHORS  AlgorithmTiming.cpp  AlgorithmTiming.h  ChangeLog  Channel.cpp  Channel.h  FeatureAlgorithm.cpp  FeatureAlgorithm.h  FeatureAlgorithms.cpp  FeatureAlgorithms.h  FeatureGroup.cpp  FeatureGroup.h  FeatureNames.cpp  FeatureNames.h  FeatureNames.hpp  ImageTransforms.cpp  ImageTransforms.h  MAP.h  Makefile  Makefile.am  Makefile.in  MatrixMap.cpp  MatrixMap.h  OldFeatureNamesFileStr.h  README  Readme.html  SharedImageMatrix.cpp  Tasks.h  TrainingSet.cpp  TrainingSet.h  WORMfile.cpp  WORMfile.h  aclocal.m4  cmatrix.cpp  cmatrix.h  config.h.in  config.status  configure  configure.ac  gpl_license.html  (+10 more)
Readme_files/: print.css
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
colors/: FuzzyCalc.cpp  FuzzyCalc.h
dimensionality_reduction/: DimensionalityReductionBase.h  FischerWeights.cpp  FischerWeights.h  LinearDiscriminantAnalysis.cpp  LinearDiscriminantAnalysis.h  PearsonWeights.cpp  PearsonWeights.h
gsl/: specfunc.cpp  specfunc.h
m4/: ax_python_devel.m4
pychrm/: test.tif
pymfg/: FeatureAlgorithms.i  FeatureTransforms.i  Makefile  Makefile.am  Makefile.in  calculate_sig.py  cmatrix.i  cmatrix.i.old  fitfile.py  graph_drawer.py  graph_window.py  object_selection.py  pymfg.py  swig.i  swig_wrap.cpp  wndchrm_error.i
python/: Makefile.am  cmatrix.i
src/: FeatureAlgorithms.cpp  FeatureAlgorithms.h  FeatureTransform.cpp  FeatureTransform.h  FeatureTransforms.cpp  FeatureTransforms.h  Makefile  Makefile.am  Makefile.in  cmatrix.cpp  cmatrix.h  wndchrm_error.cpp  wndchrm_error.h
src/statistics/: CombFirst4Moments.cpp  CombFirst4Moments.h  FeatureStatistics.cpp  FeatureStatistics.h
src/textures/: gabor.cpp  gabor.h  tamura.cpp
src/textures/haarlick/: haarlick.cpp  haarlick.h
src/textures/zernike/: zernike.cpp  zernike.h
src/transforms/: ChebyshevFourier.cpp  ChebyshevFourier.h  chebyshev.cpp  chebyshev.h
statistics/: CombFirst4Moments.cpp  CombFirst4Moments.h  FeatureStatistics.cpp  FeatureStatistics.h
test/: Makefile  Makefile.am  Makefile.in  cpp_test.cpp  test.xdot
textures/: gabor.cpp  gabor.h  tamura.cpp  tamura.h
textures/haarlick/: CVIPtexture.cpp  haarlick.cpp  mapkit.cpp  mapkit_generic.cpp  mapkit_generic.h
textures/haralick/: CVIPtexture.cpp  haralick.cpp
textures/zernike/: zernike.cpp  zernike2.cpp
transforms/: ChebishevFourier.cpp  ChebishevFourier.h  ChebyshevFourier.cpp  ChebyshevFourier.h  chebyshev.cpp  chebyshev.h  chevishev.cpp  chevishev.h  radon.cpp  radon.h
transforms/fft/: fftw3.h
transforms/fft/bcb_fftw3/: fftw3.h
transforms/wavelet/: DataGrid2D.cpp  Symlet5.cpp  Symlet5.h  Wavelet.cpp  Wavelet.h  convolution.cpp
util/: color_deconvolution.c  readTIFF.h  readTiffData.c
