
ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src pymfg

include aminclude.am

EXTRA_DIST = mfgraph.kdevelop autogen.sh $(DX_CONFIG) doc/mfgraph.tag doc/html \
	     Readme_files/common.css Readme_files/moin-email.png Readme_files/moin-www.png \
	     Readme_files/print.css Readme.html gpl_license.html lgpl_license.html
